[gd_scene load_steps=4 format=3 uid="uid://cga4hmjnrrowg"]

[ext_resource type="Texture2D" uid="uid://c3xl566njkdtf" path="res://assets/ui/icon/ingame/arrow_up.webp" id="1_djhwy"]
[ext_resource type="Script" uid="uid://dolc54df8cnqv" path="res://src/ui/ingame/upgrade/upgrade_btn.gd" id="1_tj2qi"]
[ext_resource type="Texture2D" uid="uid://dtayffjjwm2t2" path="res://assets/ui/currency/coin.webp" id="2_tj2qi"]

[node name="UpgradeBtn" type="Button"]
custom_minimum_size = Vector2(640, 152)
offset_right = 512.0
offset_bottom = 128.0
mouse_filter = 1
script = ExtResource("1_tj2qi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ImageRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_djhwy")
stretch_mode = 5

[node name="CapLbl" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "0/20"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5
alignment = 1

[node name="TitleLbl" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Increase Stamina"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="BaseLbl" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5"

[node name="Label3" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = ">"

[node name="ImprovementLbl" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.517647, 0.788235, 0.466667, 1)
text = "6"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_tj2qi")
expand_mode = 1
stretch_mode = 5

[node name="CostLbl" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "999"

[node name="InfoLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "warning"
horizontal_alignment = 1
vertical_alignment = 1
